--- a/React-vite/src/components/header_login.css
+++ b/React-vite/src/components/header_login.css
@@ -156,11 +156,31 @@ nav ul li a {
   /*動畫所花費的時間*/
 }
 
+.remind_hidden {
+  display: none;
+}
+
 .remind_circle_icon_open {
   position: absolute;
   font-size: 1.2rem;
   top: 11.8rem;
   right: 20px;
+  color: rgb(255, 90, 41);
+  -webkit-animation-name: scaleDraw;
+  /*關鍵幀名稱*/
+  -webkit-animation-timing-function: ease-in-out;
+  /*動畫的速度曲線*/
+  -webkit-animation-iteration-count: infinite;
+  /*動畫播放的次數*/
+  -webkit-animation-duration: 3s;
+  /*動畫所花費的時間*/
+}
+
+.remind_circle_icon_close {
+  position: absolute;
+  font-size: 1.2rem;
+  top: 3.5rem;
+  right: 3.5rem;
   color: rgb(255, 90, 41);
   -webkit-animation-name: scaleDraw;
   /*關鍵幀名稱*/
