--- a/React-vite/src/member/member.css
+++ b/React-vite/src/member/member.css
@@ -12,7 +12,6 @@
   padding-top: 1rem;
   padding-bottom: 4rem;
   margin-bottom: 4rem;
-  min-width: 745.8px;
 }
 
 /* --------------------------- 會員大頭貼、姓名及生日（上面區塊）-start --------------------------- */
@@ -123,7 +122,7 @@
 .member-form-content {
   order: 1;
   display: none;
-  width: 65%;
+  width: 90%;
   line-height: 1.6;
   font-size: 1.2em;
   position: relative;
@@ -182,17 +181,11 @@
   border: 0px;
   background-color: transparent;
   color: var(--body_color);
+  font-size: 1.2rem;
+  text-overflow: ellipsis;
 }
 
-.introduction-input {
-  /* border-bottom: #66B3FF solid;
-    border-top: 0px;
-    border-left: 0px;
-    border-right: 0px; */
-  border: 0px;
-  background-color: transparent;
-  font-size: 1.2rem;
-}
+
 
 .introduction-edit {
   background-color: #f5f5f5;
@@ -453,7 +446,7 @@
 /* -------------------------campaign CSS end ------------------------- */
 
 /* tab-style-end */
-
+/* 
 @media screen and (min-width: 772px) {
   .member-input {
     font-size: 1.2rem;
@@ -462,4 +455,13 @@
   .member-input>input {
     font-size: 1.2rem;
   }
+} */
+@media screen and (max-width: 470px) {
+  .member-tab .member-label{
+    margin: 0px auto 5px;
+  }
+  .introduction-input {
+    text-overflow:initial ;
+  }
+  
 }
