--- a/React-vite/src/components/header_login.css
+++ b/React-vite/src/components/header_login.css
@@ -115,11 +115,10 @@ nav ul li a {
   width: 60px;
   height: 80px;
   display: flex;
-  align-items: center
+  align-items: center;
 }
 
 @keyframes scaleDraw {
-
   /*定義關鍵幀、scaleDrew是需要繫結到選擇器的關鍵幀名稱*/
   0% {
     transform: scale(1);
@@ -160,6 +159,10 @@ nav ul li a {
   display: none;
 }
 
+.remind_hidden_menu {
+  display: none;
+}
+
 .remind_circle_icon_open {
   position: absolute;
   font-size: 1.2rem;
@@ -192,7 +195,21 @@ nav ul li a {
   /*動畫所花費的時間*/
 }
 
-
+.remind_circle_icon_menu {
+  position: absolute;
+  font-size: 1.1rem;
+  top: 1.75rem;
+  right: 1.8rem;
+  color: rgb(255, 90, 41);
+  -webkit-animation-name: scaleDraw;
+  /*關鍵幀名稱*/
+  -webkit-animation-timing-function: ease-in-out;
+  /*動畫的速度曲線*/
+  -webkit-animation-iteration-count: infinite;
+  /*動畫播放的次數*/
+  -webkit-animation-duration: 3s;
+  /*動畫所花費的時間*/
+}
 
 /* ----------------------------- RWD導覽列收縮 ----------------------------- */
 
