--- a/React-vite/src/mainpage/allstyle.css
+++ b/React-vite/src/mainpage/allstyle.css
@@ -169,9 +169,9 @@ main {
 }
 
 .tabs_label {
-  padding: 10px 16px;
+  padding: 5px 16px;
   cursor: pointer;
-  font-size: 23px;
+  font-size: 20px;
   transition: 0.4s;
   color: var(--body_color);
 }
@@ -189,7 +189,7 @@ main {
 }
 
 .tabs_radio:checked + .tabs_label {
-  font-weight: bold;
+  font-weight: 900;
   color: #f7c242;
   border-bottom: 2px solid #f7c242;
 }
