--- a/React-vite/src/member/member.css
+++ b/React-vite/src/member/member.css
@@ -7,6 +7,7 @@
   margin-top: 7rem;
   min-height: 800px;
   border-radius: 20px;
+  width: 70%;
   max-width: 745.81px;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
   padding-top: 1rem;
@@ -320,9 +321,9 @@
   color: black;
 }
 .alertIcon{
-  border: red 2px solid;
-  border-radius: 50%;
-  margin-left: 5px;
+  font-size: 20px;
+
+color:rgb(255, 90, 41);
   /* display: none; */
 }
 
