--- a/React-vite/src/event/style4.css
+++ b/React-vite/src/event/style4.css
@@ -198,6 +198,7 @@
   padding: 1rem;
   border:1px solid #f7c242;
   border-radius: 10px;
+  word-break: break-all;
 }
 
 .event_page-grid-grid-img {
@@ -208,6 +209,8 @@
   text-align: right;
   font-size: 1rem;
   width: 30%;
+  display: flex;
+  flex-direction: column;
   
 }
 
@@ -261,4 +264,9 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
+}
+
+.event_page-bd {
+  align-self: flex-end;
+  margin-top: 5px;
 }
