--- a/React-vite/src/activity/style3.css
+++ b/React-vite/src/activity/style3.css
@@ -192,21 +192,15 @@
   height: 400px;
 }
 
-.uploadImage {
+.uploadImage22 {
   text-align: center;
-  width: 80%;
-  height: 40vh;
-  border-radius: 20px;
   overflow: hidden;
-  margin: auto;
 }
 
-.uploadImage > img {
-  text-align: center;
-  width: 80%;
-  height: 40vh;
-  overflow: hidden;
+.uploadImage22> img {
   border-radius: 20px;
+  margin: 10px auto;
+  width: 570px;
 }
 
 .activityName_3 {
